# libelec

./: .gitignore  COPYING.md  ConfFileFormat.md  README.md
doc/: Doxyfile
nettest/: CMakeLists.txt  README.md  nettest.c  test.net
nettest/libacfutils-redist-v0.37/lin64/include/: cairo-features.h
nettest/libacfutils-redist-v0.37/lin64/include/freetype/config/: ftoption.h
nettest/libacfutils-redist-v0.37/mac64/include/GL/: glew.h
nettest/libacfutils-redist-v0.37/win64/include/GL/: glew.h
prototypes/: prototype.c  prototype.h
rust/: Cargo.toml  build.rs
rust/src/: elec.rs
src/: CMakeLists.txt  libelec.c  libelec.h  libelec_drawing.c  libelec_drawing.h  libelec_test.h  libelec_types_impl.h  libelec_types_net.h  libelec_vis.c  libelec_vis.h
test/: Makefile  setup.txt  test.c  test.net
